fix scrollbar height for horizontal

--- a/assets/css/adminlte/_AdminLTE-nextdom.scss
+++ b/assets/css/adminlte/_AdminLTE-nextdom.scss
@@ -33,6 +33,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 /* Scrollbar*/
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 5px;
